[tool.poetry]
name = "qdprinttree"
version = "0.1.0"
description = "Quick&Dirty Python Print Tree for dicts"
authors = ["hoefkensj <hoefkens.j@gmail.com>"]
license = "Mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
